# textvinf

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  textvinf.toml
config/: ptblm_wae_nf.jsonnet
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
tests/test_example/: test_some_function.py
textvinf/: __init__.py  cli.py  log.py
textvinf/data/: dataset_readers.py
textvinf/models/: lvm.py
textvinf/modules/: annealer.py  callbacks.py  loss.py  metrics.py
textvinf/modules/decoders/: __init__.py  decoder.py  variational_decoder.py
textvinf/modules/encoders/: __init__.py  gaussian_encoder.py  variational_encoder.py
textvinf/modules/flows/: __init__.py  flow.py
textvinf/utils/: eval_utils.py  math_utils.py  model_utils.py  tensor_utils.py
